added a progress bar and changed date added one more row to the table

--- a/README.html
+++ b/README.html
@@ -392,6 +392,11 @@ Effect Descriptions</a></td>
 <td></td>
 <td>not yet integrated</td>
 </tr>
+<tr class="odd">
+<td>One More Test Source</td>
+<td></td>
+<td>not yet integrated</td>
+</tr>
 </tbody>
 </table>
 </div>
